HOTFIX: add z-index to #page, preventing anything from overlapping the topbar

--- a/src/planbox_ui/static/styles/main.scss
+++ b/src/planbox_ui/static/styles/main.scss
@@ -87,6 +87,16 @@
 
 
 /*--------------------------------------------------
+  The Page (everything following the topbar)
+--------------------------------------------------*/
+
+#page {
+  position: relative;
+  z-index: 1;
+}
+
+
+/*--------------------------------------------------
   Images
 --------------------------------------------------*/
 
